Responding to issues 166 1. Apply i18Next to app-cc-home
Close #166

--- a/bar/90_contents/account.html
+++ b/bar/90_contents/account.html
@@ -48,7 +48,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="main.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>アカウント</span>
+        <span data-i18n="Account"></span>
         <button class="slide-list-edit-btn header-btn header-btn-right pn-btn">
             <i class="fas fa-edit fa-2x header-ic-03"></i>
         </button>
@@ -60,7 +60,7 @@
             <li>
                 <a href="new_account.html">
                     <div class="slide-list-line">
-                        <div class="new-account slide-list-line-contents add-setting">新規アカウント</div>
+                        <div class="new-account slide-list-line-contents add-setting" data-i18n="CreateAccount">新規アカウント</div>
                     </div>
                 </a>
             </li>
