--- a/bar/90_contents/account_info.html
+++ b/bar/90_contents/account_info.html
@@ -61,7 +61,7 @@
     <footer class="account-info-footer">
         <a href="account_link_role_list.html">
             <div class="edit-list">
-                <span class="edit-role" onclick="">役割を編集</span>
+                <span class="edit-role" onclick="" data-i18n="EditRole"></span>
             </div>
         </a>
     </footer>
