--- a/bar/90_contents/account_link_role.html
+++ b/bar/90_contents/account_link_role.html
@@ -57,7 +57,7 @@
         <div class="bg-gray">
             <div id="check-list">
                 <div class="title">
-                    <span>役割を選択</span>
+                    <span data-i18n="SelectRole"></span>
                 </div>
                 <ul>
                     
