--- a/bar/90_contents/application_management.html
+++ b/bar/90_contents/application_management.html
@@ -29,6 +29,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/common_old.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/app_manage.js"></script>
     <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
 
     <title>
