--- a/bar/90_contents/arrow_to_role.html
+++ b/bar/90_contents/arrow_to_role.html
@@ -48,7 +48,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="links_02.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>この人に許可した役割</span>
+        <span data-i18n="GrantRole"></span>
         <button class="header-btn header-btn-right pn-btn">
             <i class="fas fa-cog fa-2x header-ic-02"></i>
         </button>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
 
-                <div class="user-description">あなたがこの人に許可している役割です。</div>
+                <div class="user-description" data-i18n="arrowingRolesThisPerson"></div>
             </div>
 
             <div class="app-and-service">
