--- a/bar/90_contents/change_password.html
+++ b/bar/90_contents/change_password.html
@@ -54,7 +54,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="main.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>パスワード変更</span>
+        <span data-i18n="ChangePass"></span>
     </header>
     <main>
         <div class="bg-gray">
@@ -63,9 +63,9 @@
                     <li>
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text form-title form-no-border">パスワード</span>
+                                <span class="input-group-text form-title form-no-border" data-i18n="Password"></span>
                             </div>
-                            <input id="editNewPassword" type="password" class="form-control account-form form-no-border" placeholder="半角英数 6～23文字" aria-describedby="basic-addon3">
+                            <input id="editNewPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]newPassPlaceHolder" aria-describedby="basic-addon3">
                         </div>
                         <span class="popupAlertArea" style="color:red">
                             <aside id="editChangeMessage"> </aside>
@@ -74,9 +74,9 @@
                     <li>
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text form-title form-no-border">確認</span>
+                                <span class="input-group-text form-title form-no-border" data-i18n="Confirmation"></span>
                             </div>
-                            <input id="editConfirmPassword" type="password" class="form-control account-form form-no-border" placeholder="パスワードを再入力" aria-describedby="basic-addon3">
+                            <input id="editConfirmPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]confirmNewPass" aria-describedby="basic-addon3">
                         </div>
                         <span class="popupAlertArea" style="color:red">
                             <aside id="editConfirmMessage"> </aside>
@@ -88,8 +88,8 @@
     </main>
     <footer class="account-info-footer">
         <div class="edit-list footer-btn-area">
-            <button type="button" class="btn btn-secondary footer-btn" onclick="location.href='main.html'">キャンセル</button>
-            <button type="button" class="btn btn-primary footer-btn font-weight-bold" onclick="chg_pass.changePassword();">変更</button>
+            <button type="button" class="btn btn-secondary footer-btn" onclick="location.href='main.html'" data-i18n="Cancel"></button>
+            <button type="button" class="btn btn-primary footer-btn font-weight-bold" onclick="chg_pass.changePassword();" data-i18n="Update"></button>
         </div>
     </footer>
 </body>
