--- a/bar/90_contents/create_message.html
+++ b/bar/90_contents/create_message.html
@@ -61,7 +61,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="message.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>メッセージ作成</span>
+        <span data-i18n="message:CreateNewMessage"></span>
         <button class="slide-list-edit-btn header-btn header-btn-right pn-btn send-icon disable">
             <i class="fas fa-paper-plane fa-2x header-ic-03"></i>
         </button>
@@ -69,7 +69,7 @@
 
     <main class="incoming_msg">
         <div class="pn-list to-address">
-            <div class="to-user-info-area">宛先</div>
+            <div class="to-user-info-area" data-i18n="message:Destination"></div>
 
             <div class="to-user-info-area to-address-info">
                 
