--- a/bar/90_contents/incoming_message_list.html
+++ b/bar/90_contents/incoming_message_list.html
@@ -48,7 +48,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="message.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>受信メッセージ</span>
+        <span data-i18n="message:ReceiveMessage"></span>
     </header>
 
     <main>
