--- a/bar/90_contents/links.html
+++ b/bar/90_contents/links.html
@@ -49,7 +49,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="main.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>つながり</span>
+        <span data-i18n="Community"></span>
     </header>
 
     <main>
@@ -58,7 +58,7 @@
             <div id="links">
                 <ul class="hover-action">
                     <div class="edit-list">
-                        <span class="add-member">メンバー追加</span>
+                        <span class="add-member" data-i18n="AddMember"></span>
                     </div>
                 </ul>
             </div>
