--- a/bar/90_contents/links_02.html
+++ b/bar/90_contents/links_02.html
@@ -49,7 +49,7 @@
                     
                 </div>
                 <div class="modal-footer pn-modal-footer">
-                    <button type="button" class="btn" data-dismiss="modal">キャンセル</button>
+                    <button type="button" class="btn" data-dismiss="modal" data-i18n="Cancel"></button>
                     <button type="button" class="btn ok-btn">OK</button>
                 </div>
             </div>
@@ -60,7 +60,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="links.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>富士通 花子</span>
+        <span></span>
         <button class="header-btn header-btn-right pn-btn">
             <i class="fas fa-trash-alt fa-2x header-ic-02"></i>
         </button>
@@ -82,7 +82,7 @@
                                 <i class="fas fa-caret-right fa-2x"></i>
                                 <i class="fas fa-user fa-2x"></i>
                             </div>
-                            <span class="pn-list-text">この人へ許可した役割</span>
+                            <span class="pn-list-text" data-i18n="GrantRole"></span>
                         </div>
                     </a>
                 </li>
@@ -93,7 +93,7 @@
                                 <i class="fas fa-user fa-2x"></i>
                                 <i class="fas fa-caret-right fa-2x"></i>
                             </div>
-                            <span class="pn-list-text">この人から許可された役割</span>
+                            <span class="pn-list-text" data-i18n="AuthorizedRole"></span>
                         </div>
                     </a>
                 </li>
