--- a/bar/90_contents/main.html
+++ b/bar/90_contents/main.html
@@ -47,11 +47,10 @@
     <div class="modal fade double-btn-modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog pn-modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-body pn-modal-body">
-                    ログアウトしますか？
+                <div class="modal-body pn-modal-body" data-i18n="logoutConfirm">
                 </div>
                 <div class="modal-footer pn-modal-footer">
-                    <button type="button" class="btn" data-dismiss="modal">キャンセル</button>
+                    <button type="button" class="btn" data-dismiss="modal" data-i18n="Cancel"></button>
                     <button type="button" class="btn ok-btn" onclick="cm.logout();">OK</button>
                 </div>
             </div>
@@ -99,7 +98,7 @@
             <div class="account-info">
                 <div class="user-name"></div>
                 <div>
-                    <span>アカウント:</span>
+                    <span data-i18n="Account"></span>:
                     <span class="account"></span>
                 </div>
             </div>
@@ -116,7 +115,7 @@
                         <path d="M18.6,18.07h0L18,17.9a7.45,7.45,0,1,0-12.43,0L5,18.07A5.11,5.11,0,0,0,1.29,23v1a3.33,3.33,0,0,0,3.33,3.33H19A3.33,3.33,0,0,0,22.31,24V23A5.11,5.11,0,0,0,18.6,18.07Zm-6.78.82a5.12,5.12,0,1,1,5.12-5.12A5.12,5.12,0,0,1,11.82,18.89Zm4.38.92,1.76.5A2.8,2.8,0,0,1,20,23v1a1,1,0,0,1-1,1H4.62a1,1,0,0,1-1-1V23a2.8,2.8,0,0,1,2-2.68l1.76-.5a7.45,7.45,0,0,0,8.78,0Z"
                         />
                     </svg>
-                    <div>つながり</div>
+                    <div data-i18n="Community"></div>
                 </div>
             </a>
 
@@ -131,7 +130,7 @@
                         <path d="M10.95,20.24a3.3,3.3,0,0,0,0,6.59h.11a3.3,3.3,0,0,0-.11-6.59Zm.11,4.45h-.11a1.15,1.15,0,1,1,1.21-1.1A1.1,1.1,0,0,1,11.06,24.69Z"
                         />
                     </svg>
-                    <div>Appマーケット</div>
+                    <div data-i18n="AppMarket"></div>
                 </div>
             </a>
 
@@ -142,7 +141,7 @@
                         <path d="M25.56,5H4.44A2.44,2.44,0,0,0,2,7.44V22.06A2.44,2.44,0,0,0,4.44,24.5H25.56A2.44,2.44,0,0,0,28,22.06V7.44A2.44,2.44,0,0,0,25.56,5Zm0,2.44V9.51c-1.14.93-3,2.37-6.83,5.41-.86.67-2.55,2.29-3.73,2.27s-2.87-1.6-3.73-2.27c-3.88-3-5.7-4.48-6.83-5.41V7.44ZM4.44,22.06V12.64c1.16.93,2.81,2.23,5.33,4.2,1.11.87,3.05,2.8,5.23,2.79s4.09-1.89,5.23-2.79c2.52-2,4.17-3.27,5.33-4.2v9.43Z"
                         />
                     </svg>
-                    <div>メッセージ</div>
+                    <div data-i18n="Message"></div>
                 </div>
             </a>
 
@@ -150,7 +149,7 @@
 
         <!--application & service-->
         <div class="app-and-service">
-            <div class="title">アプリ・サービス</div>
+            <div class="title" data-i18n="AppAndService"></div>
             <div class="app-list">
                 
             </div>
