--- a/bar/90_contents/message.html
+++ b/bar/90_contents/message.html
@@ -48,7 +48,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="main.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>メッセージ</span>
+        <span data-i18n="Message"></span>
     </header>
 
     <main>
@@ -63,7 +63,7 @@
                                     <i class="far fa-envelope msg-list-icon"></i>
                                 </div>
                                 <div class="msg-menu-text">
-                                    <span>受信メッセージ</span>
+                                    <span data-i18n="message:ReceiveMessage"></span>
                                     <span class="pn-list-batch msg-list-batch">
                                         <span id="receiveCnt"></span>
                                     </span>
@@ -79,7 +79,7 @@
                                     <i class="far fa-paper-plane msg-list-icon"></i>
                                 </div>
                                 <div class="msg-menu-text">
-                                    <span>送信済メッセージ</span>
+                                    <span data-i18n="message:SentMessage"></span>
                                 </div>
 
                             </div>
@@ -92,7 +92,7 @@
                                     <i class="fas fa-pencil-alt msg-list-icon"></i>
                                 </div>
                                 <div class="msg-menu-text">
-                                    <span>メッセージ作成</span>
+                                    <span data-i18n="message:CreateNewMessage"></span>
                                 </div>
                             </div>
                         </a>
