--- a/bar/90_contents/message_info.html
+++ b/bar/90_contents/message_info.html
@@ -59,7 +59,7 @@
             <div class="account-info">
                 <div id="msgUserName" class="user-name font-weight-bold"></div>
                 <div>
-                    <span>登録日 </span>
+                    <span data-i18n="message:ReceivedDate"></span> 
                     <span id="msgDate"></span>
                 </div>
             </div>
@@ -76,11 +76,11 @@
         <div class="edit-list replay-btn-area">
             <button type="button" class="footer-btn" onclick="msg_info.transitionReplyMessage();">
                 <i class="fas fa-reply fa-2x"></i>
-                <div>返信</div>
+                <div data-i18n="message:Reply"></div>
             </button>
             <button type="button" class="footer-btn" onclick="msg_info.transitionTransferMessage();">
                 <i class="fas fa-arrow-right fa-2x"></i>
-                <div>転送</div>
+                <div data-i18n="message:Transfer"></div>
             </button>
         </div>
     </footer>
