--- a/bar/90_contents/profile.html
+++ b/bar/90_contents/profile.html
@@ -52,7 +52,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="main.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>プロフィール</span>
+        <span data-i18n="Profile"></span>
         <button id="edit-btn" class="slide-list-edit-btn header-btn header-btn-right pn-btn">
             <i class="fas fa-edit fa-2x header-ic-03"></i>
         </button>
@@ -67,15 +67,15 @@
                     <path d="M15,.5A14.5,14.5,0,1,0,29.5,15,14.5,14.5,0,0,0,15,.5Zm0,5.15a6.55,6.55,0,1,1-6.55,6.55A6.55,6.55,0,0,1,15,5.65Zm0,22A12.61,12.61,0,0,1,4.74,22.36a3.86,3.86,0,0,1,2.9-3.3l1.89-.47a8.42,8.42,0,0,0,10.95,0l1.89.47a3.86,3.86,0,0,1,2.9,3.3A12.61,12.61,0,0,1,15,27.63Z"
                     />
                 </svg>
-                <span class="block-title-text">表示名・アイコン</span>
+                <span class="block-title-text" data-i18n="DispNameAndIcon"></span>
             </div>
             <div class="user-name-and-icon">
                 <div class="my_icon user-icon user-icon-middle">
-                    <span style="display:none;">編集</span>
+                    <span style="display:none;" data-i18n="Edit"></span>
                 </div>
                 <div class="account-info">
                     <div class="account-info-title">
-                        <span>表示名：</span>
+                        <span data-i18n="DisplayName"></span>：
                     </div>
                     <div class="input-group mb-2">
                         <input type="text" id="user-name-form" class="form-control" disabled placeholder="" aria-label="" aria-describedby="basic-addon2">
@@ -97,7 +97,7 @@
                     <path d="M15,.5A14.5,14.5,0,1,0,29.5,15,14.5,14.5,0,0,0,15,.5Zm9.5,19.84a1.78,1.78,0,0,1-1.78,1.78H7.28A1.78,1.78,0,0,1,5.5,20.34V9.66A1.78,1.78,0,0,1,7.28,7.88H22.72A1.78,1.78,0,0,1,24.5,9.66Z"
                     />
                 </svg>
-                <span class="block-title-text">説明</span>
+                <span class="block-title-text" data-i18n="Description"></span>
             </div>
             <div class="user-profile-description">
                 <!-- <div class="description-text">
@@ -124,7 +124,7 @@
                     <path d="M15,.5A14.5,14.5,0,1,0,29.5,15,14.5,14.5,0,0,0,15,.5Zm8,9.7H19.8v3.2H23V23H13.4V19.8H10.2V23H7V19.8h3.2V16.6H7V7h9.6v3.2h3.2V7H23Z"
                     />
                 </svg>
-                <span class="block-title-text">QRコード</span>
+                <span class="block-title-text" data-i18n="QRCode">QRコード</span>
             </div>
             <div class="user-profile-qr-code">
                 <div class="user-qr-code">
