--- a/bar/90_contents/select_accounttype.html
+++ b/bar/90_contents/select_accounttype.html
@@ -43,7 +43,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="account.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>アカウント種別を選択</span>
+        <span data-i18n="SelectAccountType"></span>
     </header>
     <main>
         <!--user account infomation-->
