--- a/bar/90_contents/account_link_role_list.html
+++ b/bar/90_contents/account_link_role_list.html
@@ -49,7 +49,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="account_info.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>役割を編集</span>
+        <span data-i18n="EditRole"></span>
     </header>
 
     <main>
