--- a/bar/90_contents/arrow_from_role.html
+++ b/bar/90_contents/arrow_from_role.html
@@ -47,7 +47,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="links_02.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>この人に許可した役割</span>
+        <span data-i18n="AuthorizedRole"></span>
     </header>
 
     <main>
@@ -67,7 +67,7 @@
                     </div>
                 </div>
 
-                <div class="user-description">あなたがこの人に許可している役割です。</div>
+                <div class="user-description" data-i18n="arrowedRolesFromThisPerson"></div>
             </div>
 
             <div class="app-and-service">
