--- a/bar/90_contents/edit_account.html
+++ b/bar/90_contents/edit_account.html
@@ -47,7 +47,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="account.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>アカウント編集</span>
+        <span data-i18n="EditAccount"></span>
     </header>
 
     <main>
@@ -57,9 +57,9 @@
                     <li>
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text form-title form-no-border">名前</span>
+                                <span class="input-group-text form-title form-no-border" data-i18n="Name"></span>
                             </div>
-                            <input id="editAccountName" type="text" class="form-control account-form form-no-border" placeholder="アカウント名を入力" aria-describedby="basic-addon3">
+                            <input id="editAccountName" type="text" class="form-control account-form form-no-border" data-i18n="[placeholder]accountNamePlaceHolder" aria-describedby="basic-addon3">
                         </div>
                         <span class="popupAlertArea" style="color:red">
                             <aside id="popupEditAccountNameErrorMsg"> </aside>
@@ -69,9 +69,9 @@
                     <li>
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text form-title form-no-border">パスワード</span>
+                                <span class="input-group-text form-title form-no-border" data-i18n="Password"></span>
                             </div>
-                            <input id="editNewPassword" type="password" class="form-control account-form form-no-border" placeholder="半角英数 6～23文字" aria-describedby="basic-addon3">
+                            <input id="editNewPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]newPassPlaceHolder" aria-describedby="basic-addon3">
                         </div>
                         <span class="popupAlertArea" style="color:red">
                             <aside id="editChangeMessage"> </aside>
@@ -81,9 +81,9 @@
                     <li>
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text form-title form-no-border">確認</span>
+                                <span class="input-group-text form-title form-no-border" data-i18n="Confirmation"></span>
                             </div>
-                            <input id="editConfirmPassword" type="password" class="form-control account-form form-no-border" placeholder="パスワードを再入力" aria-describedby="basic-addon3">
+                            <input id="editConfirmPassword" type="password" class="form-control account-form form-no-border" data-i18n="[placeholder]confirmNewPass" aria-describedby="basic-addon3">
                         </div>
                         <span class="popupAlertArea" style="color:red">
                             <aside id="editConfirmMessage"> </aside>
@@ -95,8 +95,8 @@
     </main>
     <footer class="account-info-footer">
         <div class="edit-list footer-btn-area">
-            <button type="button" class="btn btn-secondary footer-btn" onclick="location.href='account.html'">キャンセル</button>
-            <button type="button" class="btn btn-primary footer-btn font-weight-bold" onclick="edit_account.editAccount();">編集</button>
+            <button type="button" class="btn btn-secondary footer-btn" onclick="location.href='account.html'" data-i18n="Cancel"></button>
+            <button type="button" class="btn btn-primary footer-btn font-weight-bold" onclick="edit_account.editAccount();" data-i18n="Edit"></button>
         </div>
     </footer>
 </body>
