--- a/bar/90_contents/extcell_link_role.html
+++ b/bar/90_contents/extcell_link_role.html
@@ -48,7 +48,7 @@
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
         <img class="title-icon-middle" alt="">
-        <span>役割を編集</span>
+        <span></span>
     </header>
 
     <main>
@@ -56,7 +56,7 @@
         <div class="bg-gray">
             <div id="check-list">
                 <div class="title">
-                    <span>役割を選択</span>
+                    <span data-i18n="SelectRole"></span>
                 </div>
                 <ul>
                     
