--- a/bar/90_contents/new_links.html
+++ b/bar/90_contents/new_links.html
@@ -37,7 +37,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/new_links.js"></script>
+    <script src="../../src/js/new_links.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
 
     <title>Personium</title>
@@ -62,7 +62,7 @@
         <a class="header-btn pn-back-btn pn-btn" href="links.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>メンバー追加</span>
+        <span data-i18n="AddMember"></span>
     </header>
 
     <main>
@@ -73,7 +73,7 @@
                 <div class="pn-search-box">
                     <div class="input-group">
                         <div class="pn-search-title">
-                            <span>検索</span>
+                            <span data-i18n="Search"></span>
                         </div>
                         <input type="text" class="form-control" id="inputSearch">
                         <button class="pn-btn pn-search-btn">
@@ -93,7 +93,7 @@
     <footer class="account-info-footer">
         <a href="#" onclick="new_links.addExternalCell();">
             <div class="edit-list">
-                <span class="add-member">追加</span>
+                <span class="add-member" data-i18n="Add"></span>
             </div>
         </a>
     </footer>
