--- a/bar/90_contents/search_cell.html
+++ b/bar/90_contents/search_cell.html
@@ -59,10 +59,10 @@
     </div>
 
     <header>
-        <a class="header-btn pn-back-btn pn-btn" href="links.html">
+        <a class="header-btn pn-back-btn pn-btn" href="create_message.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>メンバー選択</span>
+        <span data-i18n="message:SelectMember"></span>
     </header>
 
     <main>
@@ -73,7 +73,7 @@
                 <div class="pn-search-box">
                     <div class="input-group">
                         <div class="pn-search-title">
-                            <span>検索</span>
+                            <span data-i18n="Search"></span>
                         </div>
                         <input type="text" class="form-control" id="inputSearch">
                         <button class="pn-btn pn-search-btn">
@@ -93,7 +93,7 @@
     <footer class="account-info-footer">
         <a href="#" onclick="search_cell.addExternalCell();">
             <div class="edit-list">
-                <span class="add-member">追加</span>
+                <span class="add-member" data-i18n="Add"></span>
             </div>
         </a>
     </footer>
