js of new_links.html was a relative path, so I modified it

--- a/bar/90_contents/new_links.html
+++ b/bar/90_contents/new_links.html
@@ -37,7 +37,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
-    <script src="../../src/js/new_links.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/new_links.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
 
     <title>Personium</title>
