--- a/bar/90_contents/change_language.html
+++ b/bar/90_contents/change_language.html
@@ -1,83 +1,84 @@
-﻿<!DOCTYPE html>
-
+﻿<!doctype html>
 <html>
 
 <head>
-
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/app-cc-home/__/src/css/settings.css' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/app-cc-home/__/src/css/applicationmarket.css' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/bootstrap-switch/bootstrap-switch.min.css' rel='stylesheet' type='text/css'>
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/personium.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/homeapp.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/common.css">
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment-with-locales.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/bootstrap-switch/bootstrap-switch.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script>
+        FontAwesomeConfig = {
+            searchPseudoElements: true
+        };
+    </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/common_old.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/change_language.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
-
-    <title>
-        Personium Cell
-    </title>
+    <script src="./change_language.js"></script>
+    <title>Personium</title>
 </head>
 
 <body>
-    <div class="col-md-12 col-sm-12 display-table-cell v-align setting-menu slide-on">
-        <div class="row header-menu setting-header">
-            <div class="col-xs-1" id="settingBackMenu">
-                <a href="#" class="allToggle prev-icon" style="float:left;" onclick="cm.moveBackahead(true);return false;">
-                    <img id="imSettingBack" src="https://demo.personium.io/HomeApplication/__/icons/ico_back.png" alt="user">
-                </a>
-            </div>
-            <div class="col-xs-2">
-                <table class="table-fixed back-title">
-                    <tbody>
-                        <tr style="vertical-align: middle;">
-                            <td class="ellipsisText" id="settingBackTitle" align="left"></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-xs-6 text-center title" id="settingTitleMenu">
-                <h4 class="ellipsisText" data-i18n="ChangeLng">言語</h4>
-            </div>
-            <div class="col-xs-3 text-right">
-            </div>
-        </div>
-        <div class="row" id="settingboard" style="height:100%;">
-            <div style="height:100%;overflow:auto;padding-bottom:85px;" class="list-group panel-default" id="setting-panel1">
-                <div class="modal-body">
-                    <span data-i18n="changeLanguageDescription">表示する言語を選択して下さい。</span>
-                    <select class="form-control" id="selectLng">
-                        <option value="en" data-i18n="English">English</option>
-                        <option value="ja" data-i18n="Japanese">日本語</option>
-                    </select>
-                    <span id="selectLngMessage" style="color:red">
-                    </span>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" onclick="cm.moveBackahead(true);" data-i18n="Cancel">キャンセル</button>
-                    <button type="button" class="btn btn-primary" id="b-setlng-ok" data-i18n="Setup">設定</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
 
+    <header>
+        <a class="header-btn pn-back-btn pn-btn" href="main.html">
+            <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
+        </a>
+        <img class=title-icon-middle" src="" alt="">
+        <span data-i18n="ChangeLng"></span>
+    </header>
+
+    <main>
+        <div class="bg-gray">
+            <div id="language-list">
+                <div class="title">
+                    <span data-i18n="changeLanguageDescription"></span>
+                </div>
+                <ul class="hover-action">
+                    <li class="en pn-check-list check-position-l" style="pointer-events: auto;">
+                        <a href="#" onclick="i18next.changeLanguage('en'); location.href='main.html'">
+                            <div class="pn-list">
+                                <div class="account-info text-hidden"><span class="user-name" data-i18n="English">English</span></div>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="ja pn-check-list check-position-l" style="pointer-events: auto;">
+                        <a href="#" onclick="i18next.changeLanguage('ja'); location.href='main.html'">
+                            <div class="pn-list">
+                                <div class="account-info text-hidden"><span class="user-name" data-i18n="Japanese">Japanese</span></div>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </main>
+    <footer>
+    </footer>
+</body>
+
+</html>
