--- a/bar/90_contents/change_language.html
+++ b/bar/90_contents/change_language.html
@@ -38,7 +38,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
-    <script src="./change_language.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/change_language.js"></script>
     <title>Personium</title>
 </head>
 
